tests/baselines/reference/parserComputedPropertyName20.errors.txt
tests/cases/conformance/parser/ecmascript6/ComputedPropertyNames/parserComputedPropertyName20.ts(2,5): error TS1169: A computed property name in an interface must directly refer to a built-in symbol.
tests/cases/conformance/parser/ecmascript6/ComputedPropertyNames/parserComputedPropertyName20.ts(2,6): error TS2304: Cannot find name 'e'.


==== tests/cases/conformance/parser/ecmascript6/ComputedPropertyNames/parserComputedPropertyName20.ts (2 errors) ====
    interface I {
        [e](): number 
        ~~~
!!! error TS1169: A computed property name in an interface must directly refer to a built-in symbol.
         ~
!!! error TS2304: Cannot find name 'e'.
    }